fix style label

--- a/form_registrasi-label_fix2.html
+++ b/form_registrasi-label_fix2.html
@@ -22,18 +22,15 @@
 		}
 		
 		#regForm label {
-			text-align: left;
+			text-align: right;
 			padding-right: 10px;
 			width: 80px;
+			display: inline-block;
+			margin-bottom: 10px;
 		}
 		
 		#regForm input[type="text"], #regForm textarea {
 			width: 300px;
-		}
-		
-		#regForm label, #regForm .field {
-			display: inline-block;
-			margin-bottom: 10px;
 		}
 	</style>
 	</head>
